[package]
name = "actix-bb8-try"
version = "0.1.0"
authors = ["stoked_"]
edition = "2018"

[dependencies]
actix = { git = "https://github.com/actix/actix", branch = "master" }
actix-web = "2.0.0-alpha.1"
actix-rt = "1.0.0-alpha.1"
bb8 = { git = "https://github.com/khuey/bb8", branch = "master" }
bb8-postgres = { git = "https://github.com/khuey/bb8", branch = "master" }
jemallocator = "0.3.2"
tokio-executor = "0.2.0-alpha.6"
env_logger = "0.7.1"

[dependencies.tokio]
default-features = false
features = ["io", "codec"]
version = "=0.2.0-alpha.6"
